--- a/Cardna-iOS/Cardna-iOS/Source/Scene/Login/Login.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/Login/Login.storyboard
@@ -82,6 +82,9 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain"/>
+                                <connections>
+                                    <action selector="okButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="n0z-uu-BFd"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="확인" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V7r-rr-Plv">
                                 <rect key="frame" x="192" y="301.5" width="30" height="21"/>
