--- a/Cardna-iOS/Cardna-iOS/Source/Scene/SelectCard/SelectCard.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/SelectCard/SelectCard.storyboard
@@ -41,6 +41,9 @@
                                         <color key="tintColor" systemColor="systemGray6Color"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="완료"/>
+                                        <connections>
+                                            <action selector="completeButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="LoL-l3-bKg"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.070588235294117646" green="0.070588235294117646" blue="0.070588235294117646" alpha="0.0" colorSpace="calibratedRGB"/>
