--- a/Cardna-iOS/Cardna-iOS/Source/Scene/Initial/Initial.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/Initial/Initial.storyboard
@@ -15,7 +15,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icbtBoxbackPurple" translatesAutoresizingMaskIntoConstraints="NO" id="4Jn-ka-vUK">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cardnalogo" translatesAutoresizingMaskIntoConstraints="NO" id="4Jn-ka-vUK">
                                 <rect key="frame" x="138" y="256" width="99" height="87"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="99" id="gsV-5K-F66"/>
@@ -34,21 +34,19 @@
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N7G-1r-dxX">
                                 <rect key="frame" x="16" y="627" width="343" height="64"/>
-                                <color key="backgroundColor" red="0.0039215686269999999" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="64" id="gGT-aj-jAc"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="imgCardimg"/>
+                                <buttonConfiguration key="configuration" style="plain" image="btLogin"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qFO-Rr-Vob">
                                 <rect key="frame" x="16" y="707" width="343" height="64"/>
-                                <color key="backgroundColor" red="1" green="0.52120530610000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="64" id="YW2-1n-Djy"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="imgCardimg"/>
+                                <buttonConfiguration key="configuration" style="plain" image="btSignup"/>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
@@ -78,7 +76,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="icbtBoxbackPurple" width="44" height="44"/>
-        <image name="imgCardimg" width="128.33332824707031" height="40"/>
+        <image name="btLogin" width="342" height="64"/>
+        <image name="btSignup" width="342" height="64"/>
+        <image name="cardnalogo" width="99" height="87"/>
     </resources>
 </document>
