--- a/Cardna-iOS/Cardna-iOS/Source/Scene/MyPageSetting/MyPageSettingRules.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/MyPageSetting/MyPageSettingRules.storyboard
@@ -27,6 +27,9 @@
                                         </constraints>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="icbtBack"/>
+                                        <connections>
+                                            <action selector="backButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="7eM-1G-wte"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZZz-qk-bGX">
                                         <rect key="frame" x="192.5" y="11.5" width="29" height="21"/>
@@ -44,58 +47,65 @@
                                     <constraint firstItem="ZZz-qk-bGX" firstAttribute="centerX" secondItem="THR-Fz-Hnl" secondAttribute="centerX" id="xj2-s0-Qql"/>
                                 </constraints>
                             </view>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QWE-zz-Enx">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yfz-OE-Kpe">
                                 <rect key="frame" x="0.0" y="88" width="414" height="2178"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fIl-Wv-geN">
+                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LW4-RF-oI5">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="2178"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LWv-Pc-ZbC">
-                                                <rect key="frame" x="16" y="24" width="382" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Dk-3q-RQq">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="520.5"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3lT-ag-JaH">
+                                                        <rect key="frame" x="16" y="0.0" width="382" height="20.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="3lT-ag-JaH" secondAttribute="trailing" constant="16" id="IV7-rP-luC"/>
+                                                    <constraint firstAttribute="bottom" secondItem="3lT-ag-JaH" secondAttribute="bottom" constant="500" id="Qf6-th-tTD"/>
+                                                    <constraint firstItem="3lT-ag-JaH" firstAttribute="top" secondItem="1Dk-3q-RQq" secondAttribute="top" id="i4N-dk-GW8"/>
+                                                    <constraint firstItem="3lT-ag-JaH" firstAttribute="leading" secondItem="1Dk-3q-RQq" secondAttribute="leading" constant="16" id="jbs-rQ-yp0"/>
+                                                </constraints>
+                                            </view>
                                         </subviews>
-                                        <color key="backgroundColor" red="0.070588235294117646" green="0.070588235294117646" blue="0.070588235294117646" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstItem="LWv-Pc-ZbC" firstAttribute="top" secondItem="fIl-Wv-geN" secondAttribute="top" constant="24" id="NgP-aE-Pfs"/>
-                                            <constraint firstItem="LWv-Pc-ZbC" firstAttribute="leading" secondItem="fIl-Wv-geN" secondAttribute="leading" constant="16" id="TH6-Av-gke"/>
-                                            <constraint firstAttribute="trailing" secondItem="LWv-Pc-ZbC" secondAttribute="trailing" constant="16" id="ppg-JN-otW"/>
+                                            <constraint firstItem="1Dk-3q-RQq" firstAttribute="leading" secondItem="LW4-RF-oI5" secondAttribute="leading" id="5LV-Cc-RKl"/>
+                                            <constraint firstAttribute="bottom" secondItem="1Dk-3q-RQq" secondAttribute="bottom" id="8mM-Bg-U40"/>
+                                            <constraint firstItem="1Dk-3q-RQq" firstAttribute="top" secondItem="LW4-RF-oI5" secondAttribute="top" id="Hjm-De-CUi"/>
+                                            <constraint firstAttribute="trailing" secondItem="1Dk-3q-RQq" secondAttribute="trailing" id="fX3-Dw-hYR"/>
                                         </constraints>
-                                    </view>
+                                    </scrollView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="fIl-Wv-geN" firstAttribute="top" secondItem="JxB-wf-WiU" secondAttribute="top" id="4NT-cH-mEH"/>
-                                    <constraint firstItem="fIl-Wv-geN" firstAttribute="width" secondItem="o0g-Vx-QAi" secondAttribute="width" id="B5U-sD-hdS"/>
-                                    <constraint firstItem="fIl-Wv-geN" firstAttribute="leading" secondItem="JxB-wf-WiU" secondAttribute="leading" id="MLd-Gb-0tq"/>
-                                    <constraint firstItem="fIl-Wv-geN" firstAttribute="height" secondItem="o0g-Vx-QAi" secondAttribute="height" priority="250" id="N4r-TK-mcI"/>
-                                    <constraint firstItem="fIl-Wv-geN" firstAttribute="bottom" secondItem="JxB-wf-WiU" secondAttribute="bottom" constant="194" id="Qei-lN-qEH"/>
-                                    <constraint firstItem="fIl-Wv-geN" firstAttribute="trailing" secondItem="JxB-wf-WiU" secondAttribute="trailing" constant="327" id="T5v-hd-eQl"/>
+                                    <constraint firstItem="1Dk-3q-RQq" firstAttribute="width" secondItem="yfz-OE-Kpe" secondAttribute="width" id="45e-fI-v77"/>
+                                    <constraint firstAttribute="bottom" secondItem="LW4-RF-oI5" secondAttribute="bottom" id="6wo-IM-xHD"/>
+                                    <constraint firstItem="1Dk-3q-RQq" firstAttribute="height" secondItem="yfz-OE-Kpe" secondAttribute="height" priority="250" id="PrL-8c-Cgu"/>
+                                    <constraint firstItem="LW4-RF-oI5" firstAttribute="leading" secondItem="yfz-OE-Kpe" secondAttribute="leading" id="Qvv-cj-zux"/>
+                                    <constraint firstAttribute="trailing" secondItem="LW4-RF-oI5" secondAttribute="trailing" id="qpL-B3-gYF"/>
+                                    <constraint firstItem="LW4-RF-oI5" firstAttribute="top" secondItem="yfz-OE-Kpe" secondAttribute="top" id="skB-D4-zcK"/>
                                 </constraints>
-                                <viewLayoutGuide key="contentLayoutGuide" id="JxB-wf-WiU"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="o0g-Vx-QAi"/>
-                            </scrollView>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" red="0.070588235294117646" green="0.070588235294117646" blue="0.070588235294117646" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="QWE-zz-Enx" secondAttribute="trailing" id="679-e5-P89"/>
-                            <constraint firstItem="QWE-zz-Enx" firstAttribute="top" secondItem="THR-Fz-Hnl" secondAttribute="bottom" id="O11-Gb-pMS"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="yfz-OE-Kpe" secondAttribute="trailing" id="GJ5-FS-XNE"/>
                             <constraint firstItem="THR-Fz-Hnl" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="QoH-DX-Hxe"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="QWE-zz-Enx" secondAttribute="bottom" id="hg0-Mr-gdk"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="THR-Fz-Hnl" secondAttribute="trailing" id="iVz-AH-feD"/>
-                            <constraint firstItem="QWE-zz-Enx" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="uB1-Br-5PX"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="yfz-OE-Kpe" secondAttribute="bottom" id="oNK-3y-Ove"/>
+                            <constraint firstItem="yfz-OE-Kpe" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="tvo-c4-GHf"/>
+                            <constraint firstItem="yfz-OE-Kpe" firstAttribute="top" secondItem="THR-Fz-Hnl" secondAttribute="bottom" id="vTB-BY-aBS"/>
                             <constraint firstItem="THR-Fz-Hnl" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="xNY-Sk-4qP"/>
                         </constraints>
                     </view>
                     <size key="freeformSize" width="414" height="2300"/>
                     <connections>
                         <outlet property="backButton" destination="afD-Fh-zG4" id="laj-SN-Gb6"/>
-                        <outlet property="contentLabel" destination="LWv-Pc-ZbC" id="cpf-HL-nfp"/>
-                        <outlet property="contentView" destination="fIl-Wv-geN" id="4Ih-Ai-EWK"/>
+                        <outlet property="contentLabel" destination="3lT-ag-JaH" id="Xw1-u3-dPa"/>
                         <outlet property="pageTitleLabel" destination="ZZz-qk-bGX" id="NBZ-ei-ESz"/>
-                        <outlet property="scrollView" destination="QWE-zz-Enx" id="exw-by-MGk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
